Fix number alignment

--- a/src/App.css
+++ b/src/App.css
@@ -47,13 +47,24 @@
 }
 
 .slider-wrapper {
+  width: 22px;
   margin: 0 20px; /* Adjust the margin between sliders */
-  text-align: center;
+  /* text-align: center; */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  justify-content: center; /* Center items vertically */
 }
 
 /* Adjust the height of the sliders */
 .slider-wrapper .rc-slider {
   height: 250px; /* Adjust the height of the sliders */
+}
+
+/* Adjust the height of the sliders */
+.slider-wrapper p {
+  color: #bbb; /* Adjust the height of the sliders */
+  font-size: 0.9em;
 }
 
 .rc-slider-rail {
@@ -62,6 +73,10 @@
 
 .rc-slider-track, .rc-slider-tracks {
     background-color: #bbb;
+}
+
+.rc-slider-vertical {
+  width: 22px;
 }
 
 .rc-slider-vertical .rc-slider-rail {
